# AweAgent

./: README.md  SemanticScholar_papers.db  daily.py  pyproject.toml
.github/workflows/: daily_report.yml
Aweagent/: README.md  SemanticScholar_papers.db  SemanticScholar_papers_filter.db  main.py  pyproject.toml
Aweagent/src/aweagent/: __init__.py  db.py  tool.py  workflow.py
Aweagent/src/aweagent/agents/: __init__.py  annotator.py  reporter.py  searcher.py
daily_report/: 2025-07-17.md  2025-07-18.md  2025-07-19.md  SemanticScholar_papers.db  SemanticScholar_papers_filter.db
others/: prompt.md
others/Update_from_json/: README.md  update_html.py  update_readme.py
others/Update_from_json/Input/: test.json
others/Update_from_json/Ref/: design.md  memory.md
others/Update_from_json/Script/: add_record_interactive.py  update_all.py  update_html.py  utils.py
others/Update_from_json/Script/update01/: add_columns_to_json.py  update_github_stars_from_readme.py
others/Update_from_json/docs/: template.html  template.html.20250718_102916.bak  template_readme.md.20250717_170725.bak  test.json
others/Update_from_json/update01/: update_team_website_from_readme.py
src/aweagent/: __init__.py  agent.py  db.py  tool.py
