[project]
name = "aweagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Webioinfo"}
]
requires-python = ">=3.10"
dependencies = [
    "openai",
    "agno"
]

[project.scripts]
aweagent = "aweagent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
